# utils

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml
scripts/: build.sh
src/: __init__.py  client.py  main.py
src/cli/: cli.py  main.py
src/cowgirl_ai/: error_handler.py
src/cowgirl_ai/assistants/: assistant_interactions.py
src/cowgirl_ai/load_files/: client.py  development.py  file_manager.py  vector_manager.py
src/cowgirl_ai/vectors/: vector_interactions.py
src/load_files/: file_manager.py  search.py  vector_manager.py
tests/: test_openai_client.py
tools/: secret_manager.py
