[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowgirl_ai_file_manager"
version = "0.0.1"
authors = [
  { name="Tera Earlywine", email="dev@teraearlywine.com" },
]
description = "Interacting with the Open AI API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Cowgirl-AI/file-management"
Issues = "https://github.com/Cowgirl-AI/file-management/issues"
